# mbtest

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  Makefile.Docker  README.md  SECURITY.md  TODO.md  modernise-tooling.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  continuous-integration.yml  release.yml
docs/: api.rst  conf.py  guide.rst  index.rst
docs/guide/: docker.rst  record-replay.rst
src/junkdrawer/: bunch.py
src/matchers/: data.py  matcher.py  mock.py  object.py  request.py  requests.py  response.py  scripttest.py  smtp.py
src/mb/: imposters.py  matchers.py  server.py
src/mbtest/: imposters.py  matchers.py  server.py  util.py
src/mbtest/imposters/: __init__.py  base.py  imposters.py  predicates.py  responses.py  stubs.py
src/mbtest/imposters/behaviors/: __init__.py  copy.py  lookup.py  using.py
tests/: docker-compose.yml
tests/integration/: conftest.py  test_add_stabs.py  test_add_stubs.py  test_attach_to_existing.py  test_behaviors.py  test_copy.py  test_decorate.py  test_imposter.py  test_impostors.py  test_json.py  test_mb.py  test_predicates.py  test_proxy.py  test_response.py  test_server.py  test_smtp.py  test_stubs.py  test_tcp.py  test_xml.py
tests/integration/behaviors/: test_behaviors.py  test_copy.py  test_decorate.py  test_lookup.py  test_shell_transform.py
tests/integration/behaviors/test_data/: values.csv
tests/integration/formats/: test_json.py  test_smtp.py  test_xml.py
tests/integration/test_data/: impostor_structure.json
tests/unit/matchers/: test_data.py  test_matcher.py  test_mock.py  test_object.py  test_request.py  test_response.py  test_smtp.py
tests/unit/mb/: test_imposters.py
tests/unit/mbtest/: test_add_stubs.py  test_imposter.py  test_imposters.py  test_matchers.py  test_predicate.py  test_proxy.py  test_response.py  test_server.py  test_stubs.py  test_util.py
tests/unit/mbtest/behaviors/: test_copy.py  test_lookup.py  test_using.py
tests/utils/: builders.py  data2xml.py  network.py
