[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbtest"
version = "2.14.0"
description = "Python wrapper & utils for the Mountebank over the wire test double tool."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Simon Brunning", email = "simon@brunn.ing" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pyhamcrest>=2.0",
    "Deprecated>=1.2",
    "brunns-matchers>=2.9",
    "yarl>=1.9",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-docker~=3.1",
    "contexttimer>=0.3",
    "brunns-builder>=1.1",
    "trustme>=0.9",
    "furl>=2.0",
    "pytest-cov>=2.5",
    "sphinx>=3.0",
    "sphinx-autodoc-typehints>=1.10",
    "furo",
    "ruff",
    "pyright==1.1.391",
    "types-requests",
    "mutmut",
    "pipdeptree",
]

[project.urls]
Homepage = "https://github.com/brunns/mbtest/"
Repository = "https://github.com/brunns/mbtest/"
Issues = "https://github.com/brunns/mbtest/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
log_cli = true

[tool.coverage.run]
branch = true
omit = ["*/matcher.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mutmut]
paths_to_mutate = "src/"
backup = false
runner = "uv run pytest"
tests_dir = "tests/"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN", "D", "N813", "TD", "FIX002", "FA100", "PLR0913", "COM812", "ISC001", "E731", "N818", "PERF203", "TRY003", "A005"]
typing-extensions = false

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "N802", "PLR2004"]
"src/mbtest/imposters/base.py" = ["ERA001"]
"docs/*" = ["ERA001", "A001", "PTH", "SIM115", "INP001"]
